# FIAP-tech-challenger-01

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture.md  ml_canvas.md  model_card.md  monitoring_plan.md
models/: final_model_comparison.csv
notebooks/: 01_eda.ipynb
src/churn_prediction/: api.py  artifacts.py  baselines.py  config.py  cost_analysis.py  data.py  evaluate.py  inference.py  logging_config.py  neural_network.py  preprocessing.py  schemas.py  train_baselines.py  train_mlp.py
tests/: conftest.py  test_api.py  test_preprocessing.py  test_schema.py  test_smoke.py
