[project]
name = "churn-prediction"
version = "0.1.0"
description = "Pipeline end-to-end para churn IBM Telco"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "joblib>=1.3",
  "mlflow>=2.10",
  "numpy>=1.26",
  "pandas>=2.1",
  "pandera>=0.18",
  "pydantic>=2.5",
  "pytest>=8.0",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "uvicorn>=0.27",
  "httpx>=0.26",
  "ruff>=0.3"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
